updated visuals