@@ -1,35 +1,52 @@
 package com.toadstoolstudios.lilwings.api;
 
-import com.google.common.reflect.TypeToken;
 import com.google.gson.Gson;
-import com.google.gson.JsonArray;
+import com.toadstoolstudios.lilwings.LilWings;
 import dev.architectury.injectables.annotations.ExpectPlatform;
-import net.minecraft.client.MinecraftClient;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.Set;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 
 public class PatreonManager {
     private static final Logger LOGGER = LogManager.getLogger();
-    private static Set<UUID> patrons;
+    private static PatreonData patrons;
+
+    private static final HttpClient CLIENT = HttpClient.newBuilder()
+            .version(HttpClient.Version.HTTP_2)
+            .followRedirects(HttpClient.Redirect.NORMAL)
+            .connectTimeout(Duration.ofSeconds(10))
+            .build();
+
+    public static final String URL = "https://raw.githubusercontent.com/terrarium-earth/Lil-Wings/crossplatform/patrons.json";
 
     public static void init() {
-        CompletableFuture.runAsync(() -> {
-            try (var inputStreamReader = new InputStreamReader(new URL("https://raw.githubusercontent.com/terrarium-earth/Lil-Wings/crossplatform/patrons.json").openStream())) {
-                patrons = new Gson().fromJson(inputStreamReader, new TypeToken<Set<UUID>>(){}.getType());
-                LOGGER.info("Got Patreon data.");
-            } catch (IOException exception) {
-                LOGGER.error("Failed to get Patreon data", exception);
-            }
-        });
+        LOGGER.info("Attempted ")
+        try {
+            HttpRequest request = HttpRequest.newBuilder(new URI(URL))
+                    .GET()
+                    .version(HttpClient.Version.HTTP_2)
+                    .header("User-Agent", "Minecraft Mod (" + LilWings.MODID  + ")")
+                    .build();
+
+            HttpResponse<String> send = CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
+
+            patrons = new Gson().fromJson(send.body(), PatreonData.class);
+            LOGGER.info("Got Patreon data.");
+        } catch (Exception exception) {
+            LOGGER.error("Failed to get Patreon data", exception);
+        }
     }
 
     @ExpectPlatform
@@ -38,6 +55,12 @@ public class PatreonManager {
     }
 
     public static boolean isUserPatron(UUID uuid) {
-        return isInDev() || patrons.contains(uuid);
+        //return isInDev() || patrons.getPatrons().contains(uuid);
+        return patrons.getPatrons().contains(uuid);
+    }
+
+    @Nullable
+    public static PatreonData.ButterflyType getButterflyType(UUID uuid) {
+        return isInDev() ? PatreonData.ButterflyType.CRYSTAL_PUFF : patrons.getLeveledPatrons().get(uuid);
     }
 }
